fix(boot): compatibility message not showing

--- a/src/styles/boot.styl
+++ b/src/styles/boot.styl
@@ -11,11 +11,8 @@
   width 100%
 
   #logo
-    min-width 418px // actual logo width
-
-    &.loading
-      #logo-marker
-        animation bouncing-marker 1.5s ease infinite
+    &.loading #logo-marker
+      animation bouncing-marker 1.5s ease infinite
 
     @media queryMobile
       transform scale(0.6)
